--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                                         <img src="assets/img/djSmileyFace.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                         <h4 class="title">A.K.</h4>
                                         <p class="category text-primary">The Brain</p>
-                                        <p class="description">You can write here details about one of your team members. You can give more details about what they do. Feel free to add some
-                                            <a href="#">links</a> for people to be able to follow them outside the site.</p>
+                                        <p class="description">Chicago born and Miami schooled, AK has broad experience in data mining and using data to solve complex problems. Learn more
+                                            <a href="#">here</a>.</p>
                                         <a href="#pablo" class="btn btn-primary btn-icon btn-icon-mini"><i class="fa fa-twitter"></i></a>
                                         <a href="#pablo" class="btn btn-primary btn-icon btn-icon-mini"><i class="fa fa-instagram"></i></a>
                                         <a href="#pablo" class="btn btn-primary btn-icon btn-icon-mini"><i class="fa fa-facebook-square"></i></a>
@@ -171,9 +171,9 @@
                                     <div class="team-player">
                                         <img src="assets/img/djSmileyFace.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                         <h4 class="title">Tyrone</h4>
-                                        <p class="category text-primary">DJ</p>
-                                        <p class="description">You can write here details about one of your team members. You can give more details about what they do. Feel free to add some
-                                            <a href="#">links</a> for people to be able to follow them outside the site.</p>
+                                        <p class="category text-primary">Engineer/DJ</p>
+                                        <p class="description">20 Year club DJ, with an advanced engineering degree. Unique experience put to use building this app. Learn more
+                                            <a href="#">here</a>.</p>
                                         <a href="#pablo" class="btn btn-primary btn-icon btn-icon-mini"><i class="fa fa-twitter"></i></a>
                                         <a href="#pablo" class="btn btn-primary btn-icon btn-icon-mini"><i class="fa fa-linkedin"></i></a>
                                     </div>
@@ -183,8 +183,8 @@
                                         <img src="assets/img/djSmileyFace.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                         <h4 class="title">Tony</h4>
                                         <p class="category text-primary">Designer</p>
-                                        <p class="description">You can write here details about one of your team members. You can give more details about what they do. Feel free to add some
-                                            <a href="#">links</a> for people to be able to follow them outside the site.</p>
+                                        <p class="description">Tony is a journeyman color professional for web and 4/c print. Past working experiences have included working with high end and notable clients such as Chick fil a, Fossil. Learn more 
+                                            <a href="#">here</a>.</p>
                                         <a href="#pablo" class="btn btn-primary btn-icon btn-icon-mini"><i class="fa fa-google-plus"></i></a>
                                         <a href="#pablo" class="btn btn-primary btn-icon btn-icon-mini"><i class="fa fa-youtube-play"></i></a>
                                         <a href="#pablo" class="btn btn-primary btn-icon btn-icon-mini"><i class="fa fa-twitter"></i></a>
